--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "next-auth": "^4.23.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.47.0",
+    "react-toastify": "^9.1.3",
     "yup": "^1.3.2"
   },
   "devDependencies": {
